k8s/do/do-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wedding
  name: wedding-service
  labels:
    app: wedding-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wedding-service
  template:
    metadata:
      labels:
        app: wedding-service
    spec:
      containers:
        - name: wedding-service
          image: ghcr.io/lucascarioca/wedding-registration-services:latest
          ports:
            - containerPort: 80
              name: w-r-s-http
